--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'ClevertecTasks'
 include ('Gradle-plugin')
 include 'facadePattern'
 include 'chain-observer'
+include 'command-Pattern'
 
