--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'custom-deserializer'
 include 'facadePattern'
 include 'chain-observer'
 include 'command-Pattern'
+include 'video-hosting'
 
